--- a/app/styles/tbba.scss
+++ b/app/styles/tbba.scss
@@ -111,6 +111,8 @@ ul.button-sub-nav {
 ul.button-sub-nav {
     padding-left: 0px;
 }
+
+.theme-blue .sub-navigation-link-list .btn-link:hover{color:#fff;}
 /* classification */
 /* classification */
 
